[tool.poetry]
name = "phospho"
version = "0.2.14"
description = "Analytics for LLM apps"
authors = ["Pierre-Louis Biojout <dev@phospho.app>"]
readme = "README.md"
homepage = "https://phospho.app"
documentation = "https://docs.phospho.app"
keywords = ['LLM', 'Agents', 'gen ai', 'phospho', 'analytics', 'observability']

[tool.poetry.dependencies]
python = ">=3.8,<4.0"
requests = "^2.31.0"
pydantic = "^2.5.2"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
requests-mock = "^1.11.0"
openai = "^1.3.5"
pytest-asyncio = "^0.21.1"
pandas = "^2.0.3"

[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
sphinx-book-theme = "^1.0.1"
sphinx = "6.2.1"
sphinx-copybutton = "^0.5.2"
myst-parser = "^2.0.0"
sphinx-autodoc2 = "^0.5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
exclude = ["tests/", ".github/", ".pytest_cache/", "docs/"]
