[tool.poetry]
name = "ai_hub"
version = "0.1.0"
description = "The backend service handling AI related tasks (training and inference) for phospho"
authors = ["phospho <contact@phospho.app>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11, <3.13"
uvicorn = "^0.29.0"
loguru = "^0.7.2"
python-dotenv = "^1.0.1"
motor = "^3.4.0"
openai = "^1.30.3"
scikit-learn = "^1.5.0"
pandas = "^2.2.2"
sentry-sdk = "^2.13.0"
aiohealthcheck = "^2018.7.1"
stripe = "^10.8.0"
protobuf = "^5.27.3"
temporalio = "^1.7.0"
resend = "^2.4.0"
tiktoken = "^0.8.0"
phospho = { path = "../phospho-python", develop = false, extras = ["lab"] }
phospho_backend = { path = "../backend", develop = false }


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
