[tool.poetry]
name = "app"
version = "0.1.0"
description = "Backend of Phospho"
authors = ["Nicolas Oulianov <nicolas@phospho.ai>"]
license = "Copyright Phospho 2024"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
aiohttp = ">=3.8.6"
fastapi = ">=0.109.0"
loguru = ">=0.7.2"
motor = ">=3.3.2"
numpy = ">=1.26.3, <2.0.0"
openai = ">=1.7.2"
openpyxl = ">=3.1.2"
pandas = "2.1.4"
propelauth-fastapi = ">=2.1.8"
propelauth-py = ">=3.1.9"
protobuf = "4.25.2"
pydantic = "2.5.3"
pytest = "7.4.3"
pytest-asyncio = "^0.23.3"
python-dotenv = "1.0.0"
requests = "2.32.3"
tiktoken = ">=0.5.1"
uvicorn = ">=0.23.2"
sentry-sdk = { version = ">=1.39.1", extras = ["fastapi"] }
google-cloud-language = "^2.12.0"
google-api-python-client = "^2.115.0"
qdrant-client = "^1.7.1"
resend = "^2.1.0"
stripe = "^10.8.0"
python-multipart = "^0.0.9"
mypy = "^1.9.0"
pyarrow = "^16.0.0"
langsmith = "^0.1.63"
xlsxwriter = "^3.2.0"
langfuse = "^2.36.2"
fastapi-simple-rate-limiter = "^0.0.4"
argilla = "^1.29.0"
google-cloud-storage = "^2.17.0"
sqlmodel = "^0.0.20"
psycopg2-binary = "^2.9.9"
scikit-learn = "^1.5.1"
customerio-cdp-analytics = "^0.0.2"
temporalio = "^1.6.0"
types-requests = "^2.32.0.20240914"
opentelemetry-proto = "^1.27.0"

[tool.poetry.group.dev]
optional = true
[tool.poetry.group.dev.dependencies]
phospho = { path = "../phospho-python", develop = false, extras = ["lab"] }


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
