[tool.poetry]
name = "app"
version = "0.1.0"
description = "phospho extractor"
authors = ["Pierre-LouisBJT <plbiojout@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.109.2"
python-dotenv = "^1.0.1"
uvicorn = { extras = ["standard"], version = "^0.27.1" }
pymongo = "^4.6.1"
motor = "^3.3.2"
loguru = "^0.7.2"
requests = "^2.31.0"
tiktoken = "^0.6.0"
openai = "^1.12.0"
cohere = "^4.48"
pytest = "^8.0.1"
pytest-asyncio = "^0.23.5"
sentry-sdk = { extras = ["fastapi"], version = "^1.40.5" }
qdrant-client = "^1.7.3"
langdetect = "^1.0.9"
google-cloud-language = "^2.13.3"
google-cloud = "^0.34.0"
langsmith = "^0.1.63"

[tool.poetry.group.dev]
optional = true
[tool.poetry.group.dev.dependencies]
phospho = { path = "../phospho-python", develop = true, extras = ["lab"] }


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
