[tool.poetry]
name = "extractor"
version = "0.1.0"
description = "phospho extractor"
authors = ["Pierre-LouisBJT <plbiojout@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
python-dotenv = "^1.0.1"
pymongo = "4.8.0"
motor = "3.4.0"
loguru = "^0.7.2"
tiktoken = "^0.8.0"
openai = "^1.12.0"
pytest = "^8.0.1"
pytest-asyncio = "^0.23.5"
qdrant-client = "^1.7.3"
langdetect = "^1.0.9"
google-cloud-language = "^2.13.3"
google-cloud = "^0.34.0"
langsmith = "^0.1.63"
pycryptodome = "^3.20.0"
langfuse = "^2.36.2"
numpy = "1.26.4"
aiohttp = "^3.10.4"
temporalio = "^1.6.0"
requests = "^2.32.3"
stripe = "^10.6.0"
sentry-sdk = "^2.1"
aiohealthcheck = "^2018.7.1"
phospho = { path = "../phospho-python", develop = true, extras = ["lab"] }


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
